--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  
   "scripts": {
-    "test": "nodemon src/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [
     "javascript",
@@ -16,6 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.1",
     "prettier": "^3.2.4"
   },
   "devDependencies": {
