--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "type": "module",
-  
   "scripts": {
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
@@ -16,10 +15,13 @@
   "author": "Ganesh Ghode",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
-    "prettier": "^3.2.4"
+    "prettier": "^3.2.4",
+    "router": "^1.3.8"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
